compiler/test/fail/obj_comp_property.js
// Cannot handle computed property.
const name = "something";

const foo = {
  [name]: "content",
};
